add intention to user & filter by intention
